2006-10-12  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/imagemap/imap_main.c (do_data_changed_dialog): Fixed
	compiler warning by using proper cast.

2006-10-12  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/paint-funcs/scale-funcs.c:  apply modified patch
	from GG to improve accuracy of Lanczos,  probably fixes
	bug #358481.

2006-10-12  Sven Neumann  <sven@gimp.org>

	* INSTALL: improvements based on a patch from bug #361672.

2006-10-12  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpstock.c (gimp_stock_items): added a mnemonic
	for GIMP_STOCK_TOOL_CROP.

	* plug-ins/common/gif.c (bad_bounds_dialog): improved warning dialog.

2006-10-11  Michael Schumacher  <schumaml@cvs.gnome.org>
	
	* libgimpthumb/gimpthumb.def: added gimp_thumb_file_type_get_type

2006-10-11  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/paint-funcs/scale-funcs.[ch]:  apply patch from GG
	to improve accuracy of Lanczos, from bug #358481.

2006-10-11  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.3.13.

2006-10-11  Sven Neumann  <sven@gimp.org>

	* Made 2.3.12 development release.

	* plug-ins/pygimp/Makefile.am (codegen_files): added missing files.

2006-10-11  Raphaël Quinet  <raphael@gimp.org>

	* app/xcf/xcf-load.c (xcf_load_tile_rle): workaround for bug
	#357809: avoid crashing when invalid offsets are read for a
	compressed tile in the XCF file.

2006-10-11  Sven Neumann  <sven@gimp.org>

	* modules/Makefile.am: build the color-managed CMYK color selector
	with the same filename as the naïve implementation; they are
	mutually exclusive.

2006-10-11  Sven Neumann  <sven@gimp.org>

	* app/pdb/gimppdb.c: added missing casts.

2006-10-10  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-colors.c: Add slice support to the colors
	types. Fixes bug #360423.

2006-10-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/nova.c: applied patch from Aurimas Juška that
	adds a missing cast which should fix bug #340073.
